Elliptical Orbit basics and code improvements

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".EllipticalOrbit"></activity>
         <activity
             android:name=".Gravitation"
             android:label="@string/title_activity_gravitation"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".RelativityActivity" />
         <activity
             android:name=".CircularOrbit"
