--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EllipticalOrbit"></activity>
+        <activity
+            android:name=".EllipticalOrbit" />
         <activity
             android:name=".Gravitation"
-            android:label="@string/title_activity_gravitation"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".RelativityActivity" />
+            android:label="@string/title_activity_gravitation" />
         <activity
             android:name=".CircularOrbit"
-            android:label="@string/title_activity_circular_orbit"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/title_activity_circular_orbit" />
+        <activity
+            android:name=".RelativityActivity"
+            android:label="@string/title_activity_relativity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
