--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.testingapp">
+    package="com.kingomac.fisica2bach">
 
     <application
         android:allowBackup="true"
@@ -9,18 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Quantum" android:label="@string/title_activity_quantum"></activity>
-        <activity android:name=".EllipticalOrbit" android:label="@string/title_activity_elliptical_orbit" />
+        <activity android:name="com.kingomac.fisica2bach.Quantum" android:label="@string/title_activity_quantum"></activity>
+        <activity android:name="com.kingomac.fisica2bach.EllipticalOrbit" android:label="@string/title_activity_elliptical_orbit" />
         <activity
-            android:name=".Gravitation"
+            android:name="com.kingomac.fisica2bach.Gravitation"
             android:label="@string/title_activity_gravitation" />
         <activity
-            android:name=".CircularOrbit"
+            android:name="com.kingomac.fisica2bach.CircularOrbit"
             android:label="@string/title_activity_circular_orbit" />
         <activity
-            android:name=".RelativityActivity"
+            android:name="com.kingomac.fisica2bach.RelativityActivity"
             android:label="@string/title_activity_relativity" />
-        <activity android:name=".MainActivity">
+        <activity android:name="com.kingomac.fisica2bach.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
