Quantum additions and accent color changed

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.example.testingapp"
+        applicationId 'com.kingomac.fisica2bach'
         minSdkVersion 26
         targetSdkVersion 29
         versionCode 1
